# photo-organizer

./: Cargo.toml  README.md  rustfmt.toml
src/: checks.rs  collection.rs  commands.rs  index.rs  main.rs
