[package]
name = "photo-organizer"
description = "CLI tool for organizing photo collections written in Rust"
readme = "README.md"
authors = ["Christian Mandery <christian@mandery.ch>"]
repository = "https://github.com/chrismandery/photo-organizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "po"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
clap-verbosity-flag = "2.0"
env_logger = "0.10"
hex = "0.4"
log = "0.4"
kamadak-exif = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2"
