[package]
name = "photo-organizer"
description = "CLI tool for organizing photo collections written in Rust"
readme = "README.md"
authors = ["Christian Mandery <christian@mandery.ch>"]
repository = "https://github.com/chrismandery/photo-organizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "po"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
clap-verbosity-flag = "2.0"
env_logger = "0.10"
geo-types = "0.7"
gpx = "0.8"
hex = "0.4"
html-escape = "0.2"
image = "0.24"
log = "0.4"
kamadak-exif = "0.5"
rayon = "1.7"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2"
